직렬/병렬 임베딩